# termcalc

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  makefile  test.sh
src/: calcengine.cpp  calcengine.h  calculator.cpp  calculator.h  commandengine.cpp  commandengine.h  environment.cpp  environment.h  expression.cpp  expression.h  function.cpp  function.h  linenoise.cpp  linenoise.h  numberhelpers.cpp  numberhelpers.h  numbertype.cpp  numbertype.h  numericconstant.cpp  numericconstant.h  operator.cpp  operator.h  parser.cpp  parser.h  resultvalue.cpp  resultvalue.h  termcalc.cpp  termcalc.h  token.cpp  token.h
src/calculation/: calcengine.cpp  calculationengine.cpp  calculationengine.h  calculationvisitor.cpp  calculationvisitor.h  environment.cpp  environment.h  function.cpp  function.h  numberhelpers.cpp  numberhelpers.h
src/calculation/numbertypes/: complextype.cpp  complextype.h  floattype.cpp  floattype.h  inttype.cpp  inttype.h  numbertype.cpp  numbertype.h  numbertypes.h
src/core/: environment.h  function.cpp  function.h  numbertype.cpp  numbertype.h  numericconstant.cpp  numericconstant.h  operator.cpp  operator.h  resultvalue.cpp  resultvalue.h
src/expressions/: expression.cpp  expression.h
src/parser/: parser.cpp  parser.h  token.cpp  token.h
src/visitors/: calculationvisitor.cpp  calculationvisitor.h  dfsvisitor.cpp  dfsvisitor.h  predicatevisitor.cpp  predicatevisitor.h  printvisitor.cpp  printvisitor.h  visitor.cpp  visitor.h
tests/: calculator.h  commandengine.h  complex.h  float.h  general.h  int.h  numericconstant.h  test.h
tests/runners/: test-runner.cpp  vmtest_runner.cpp
